Fixing z-index on nav

--- a/source/_patterns/00-atoms/00-base/__variables.scss
+++ b/source/_patterns/00-atoms/00-base/__variables.scss
@@ -63,5 +63,5 @@ $nav-a-h-spacing--sm: 1rem;
 // Z-indices
 $zindex: (
   base: 1,
-  drop-down-menu: 10000
+  drop-down-menu: 500
 );
